# Terrain_Analysis_on_IA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sources/: CMakeLists.txt  main.cpp  topological_main.cpp
sources/core_library/: .gitignore  CMakeLists.txt  README.md
sources/core_library/sources/: CMakeLists.txt
sources/core_library/sources/ia/: edge.h  mesh.h  triangle.h  vertex.h  vt_star.h
sources/core_library/sources/utilities/: basic_wrappers.h  io.cpp  io.h  quad_mesh.cpp  quad_mesh.h  sorting.h  string_management.cpp  string_management.h  timer.h  usage.h
sources/curvature/: abstract_curvature.cpp  abstract_curvature.h  c_curvature.cpp  c_curvature.h  concentrated_curvature.cpp  concentrated_curvature.h  geometry_curvature.cpp  geometry_curvature.h  mean_curvature.cpp  mean_curvature.h
sources/terrain_features/: critical_points_extractor.cpp  critical_points_extractor.h  geometry_slope.cpp  geometry_slope.h  slope_extractor.cpp  slope_extractor.h
